--- a/Share Beauty App/Views/LifeStyleProductView.xib
+++ b/Share Beauty App/Views/LifeStyleProductView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,6 +15,7 @@
             <connections>
                 <outlet property="mAnswerViewTopToBottom" destination="2V4-ng-Kn0" id="QYm-tR-2Yf"/>
                 <outlet property="mAnswerViewTopToTop" destination="3hP-91-Ggr" id="Hwi-ur-ltN"/>
+                <outlet property="mBackImageView" destination="fOg-SE-0nQ" id="vlM-am-SjH"/>
                 <outlet property="mBtnProduct" destination="kht-Ow-khM" id="Pdp-i3-ekT"/>
                 <outlet property="mBtnRecommend" destination="kz7-If-yoC" id="BJV-CL-SQz"/>
                 <outlet property="mBtnWhy" destination="XUf-2Z-fWG" id="dJ1-u3-njm"/>
@@ -38,6 +39,9 @@
             <rect key="frame" x="0.0" y="0.0" width="310" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fOg-SE-0nQ">
+                    <rect key="frame" x="0.0" y="0.0" width="310" height="600"/>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AFN-Lt-2aS">
                     <rect key="frame" x="0.0" y="0.0" width="310" height="180"/>
                     <subviews>
@@ -370,16 +374,20 @@
                 </view>
             </subviews>
             <constraints>
+                <constraint firstItem="fOg-SE-0nQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="1FD-C1-aqi"/>
                 <constraint firstItem="AFN-Lt-2aS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="1W8-Le-RPt"/>
                 <constraint firstItem="PGB-fZ-fTR" firstAttribute="top" secondItem="6Ao-fi-dFP" secondAttribute="bottom" id="4qj-fn-sgW"/>
                 <constraint firstItem="6Ao-fi-dFP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="9e1-Tt-jhU"/>
                 <constraint firstItem="PGB-fZ-fTR" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="182:600" id="Aj3-Ws-pAC"/>
+                <constraint firstItem="fOg-SE-0nQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="B1t-4Y-Qcq"/>
                 <constraint firstAttribute="trailing" secondItem="PGB-fZ-fTR" secondAttribute="trailing" id="C5a-EF-Ix9"/>
                 <constraint firstAttribute="trailing" secondItem="AFN-Lt-2aS" secondAttribute="trailing" id="IdU-ED-aLh"/>
+                <constraint firstAttribute="bottom" secondItem="fOg-SE-0nQ" secondAttribute="bottom" id="KTv-us-170"/>
                 <constraint firstAttribute="bottom" secondItem="6Ao-fi-dFP" secondAttribute="bottom" id="T8h-cX-wyD"/>
                 <constraint firstAttribute="bottom" secondItem="PGB-fZ-fTR" secondAttribute="bottom" id="WqY-va-s1U"/>
                 <constraint firstItem="AFN-Lt-2aS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ZQ5-uV-rqe"/>
                 <constraint firstItem="PGB-fZ-fTR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Zrv-ad-29b"/>
+                <constraint firstAttribute="trailing" secondItem="fOg-SE-0nQ" secondAttribute="trailing" id="dyq-Hj-wya"/>
                 <constraint firstItem="AFN-Lt-2aS" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="180:600" id="lXi-UI-0PL"/>
                 <constraint firstItem="6Ao-fi-dFP" firstAttribute="top" secondItem="AFN-Lt-2aS" secondAttribute="bottom" id="uo2-Ia-07O"/>
                 <constraint firstAttribute="trailing" secondItem="6Ao-fi-dFP" secondAttribute="trailing" id="xos-KA-PJv"/>
