--- a/Share Beauty App/Base.lproj/LifeStyleFourthDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LifeStyleFourthDetailViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="EDj-9X-S0J">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <rect key="frame" x="0.0" y="188" width="1024" height="580"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="51Z-qT-La0">
-                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="718"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="550"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5K-nA-MUV">
                                                 <rect key="frame" x="512" y="10" width="0.0" height="100"/>
@@ -34,38 +34,38 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u5G-qQ-S4G">
-                                                <rect key="frame" x="0.0" y="120" width="1024" height="598"/>
+                                                <rect key="frame" x="0.0" y="120" width="1024" height="430"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ojf-at-wkC">
-                                                        <rect key="frame" x="340" y="0.0" width="1" height="598"/>
+                                                        <rect key="frame" x="340" y="0.0" width="1" height="430"/>
                                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="1" id="i0f-na-tdc"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KM8-F9-WfB">
-                                                        <rect key="frame" x="682" y="0.0" width="1" height="598"/>
+                                                        <rect key="frame" x="682" y="0.0" width="1" height="430"/>
                                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="1" id="lUK-ZZ-l56"/>
                                                         </constraints>
                                                     </view>
                                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CgY-aw-hiH" customClass="LifeStyleProductView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="340.5" height="598"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="340.5" height="430"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="numberString" value="1"/>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isShowAnswerView" value="YES"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YbL-Uw-NxF" customClass="LifeStyleProductView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                        <rect key="frame" x="341" y="0.0" width="341" height="598"/>
+                                                        <rect key="frame" x="341" y="0.0" width="341" height="430"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="numberString" value="2"/>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isShowAnswerView" value="YES"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sRT-R7-zYN" customClass="LifeStyleProductView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                        <rect key="frame" x="683" y="0.0" width="340.5" height="598"/>
+                                                        <rect key="frame" x="683" y="0.0" width="340.5" height="430"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="numberString" value="3"/>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isShowAnswerView" value="YES"/>
@@ -117,18 +117,28 @@
                                     <constraint firstItem="51Z-qT-La0" firstAttribute="height" secondItem="EDj-9X-S0J" secondAttribute="height" constant="-30" id="kJq-M9-KHu"/>
                                 </constraints>
                             </scrollView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bXt-ou-hpN">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="168"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="168" id="Ip9-2h-1AN"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="51Z-qT-La0" firstAttribute="top" secondItem="bXt-ou-hpN" secondAttribute="bottom" id="2Dl-76-KR4"/>
                             <constraint firstItem="CGR-fE-t9L" firstAttribute="top" secondItem="EDj-9X-S0J" secondAttribute="bottom" id="2vt-ed-4qG"/>
+                            <constraint firstItem="bXt-ou-hpN" firstAttribute="top" secondItem="aX3-Uf-xB9" secondAttribute="bottom" id="6jr-ET-1Gw"/>
                             <constraint firstItem="EDj-9X-S0J" firstAttribute="leading" secondItem="FpG-pU-e2L" secondAttribute="leading" id="Dvg-1p-Jkp"/>
+                            <constraint firstAttribute="trailing" secondItem="bXt-ou-hpN" secondAttribute="trailing" id="Ql6-LE-INR"/>
+                            <constraint firstItem="bXt-ou-hpN" firstAttribute="leading" secondItem="FpG-pU-e2L" secondAttribute="leading" id="Qvw-Ey-ryC"/>
                             <constraint firstAttribute="trailing" secondItem="EDj-9X-S0J" secondAttribute="trailing" id="SZR-Ri-igz"/>
-                            <constraint firstItem="EDj-9X-S0J" firstAttribute="top" secondItem="FpG-pU-e2L" secondAttribute="top" id="tIi-IB-8An"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mLblTopics" destination="q5K-nA-MUV" id="2vj-3R-aNg"/>
                         <outlet property="mScrollV" destination="EDj-9X-S0J" id="kva-p8-1gC"/>
+                        <outlet property="mTopImageView" destination="bXt-ou-hpN" id="3DR-Nt-eXu"/>
                         <outlet property="mVContent" destination="51Z-qT-La0" id="5kY-Ub-wrz"/>
                         <outletCollection property="mLifeStyleProductViews" destination="CgY-aw-hiH" collectionClass="NSMutableArray" id="ZFN-KZ-23M"/>
                         <outletCollection property="mLifeStyleProductViews" destination="YbL-Uw-NxF" collectionClass="NSMutableArray" id="M7n-n3-3gd"/>
@@ -137,7 +147,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y21-xM-FdZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7437" y="-1114"/>
+            <point key="canvasLocation" x="-7437.3046874999991" y="-1114.0625"/>
         </scene>
     </scenes>
 </document>
